# django_backend

./: .gitignore  Readme.md  middleware.py  permissions.py  pyproject.toml
analytics/: admin.py  models.py  serializers.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_initial.py
carts/: admin.py  models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py
core/: schema.py  settings.py  urls.py
order_items/: models.py  serializers.py  views.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0002_order_notes_order_shipping_address_and_more.py
payments/: admin.py  models.py  serializers.py  views.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0002_product_updated_at.py  0003_auto_20250401_1755.py
users/: admin.py  models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
